--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     </main>
         <article>
-            <p>This is the website of Guro Handeland. Her stuff. What she has done in different forms and ways.</p>
+            <pe>This is the website of Guro Handeland. Her stuff. What she has done in different forms and ways.</p>
         </article>
         <div class="grid">
             <img src="images/gurohandeland_sun.png" alt="Guro Handeland">
