--- a/where.html
+++ b/where.html
@@ -20,7 +20,7 @@
     </nav>
     <div class="where">
         <h2>
-            Henningsvær
+            Nøtterøy / Nissedal, Vestfold & Telemark, Norge
         </h2>
     </div>
 </body>
