Added new header

--- a/index.html
+++ b/index.html
@@ -8,31 +8,39 @@
 </head>
 <body>
     <header>
-        <h1>Guro Handeland</h1>
-        <nav>
-            <menu>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="drawings.html">Drawings</a></li>
-                <li><a href="photo.html">Photo</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="where.html">Hvor er jeg</a></li>
-            </menu>
-        </nav> 
+        <menu class="navmenu">
+            <li class="navli"><a class="nava" href="index.html">Home</a></li>
+            <li class="navli"><a class="nava" href="about.html">About</a></li>
+            <li class="navli"><a class="nava" href="drawings.html">Drawings</a></li>
+            <li class="navli"><a class="nava" href="photo.html">Photo</a></li>
+            <li class="navli"><a class="nava" href="projects.html">Projects</a></li>
+            <li class="navli"><a class="nava" href="where.html">Whereabouts</a></li>
+        </menu>
     </header>
     <main>
 
 
     </main>
-        <article>
-            <pe>This is the website of Guro Handeland. Her stuff. What she has done in different forms and ways.</p>
+        <article class="grid">
+            <p>This is the website of <h1>Guro Handeland</h1></p><p>Her stuff. What she has done in different forms and ways.</p>
+            <blockquote>
+
+
+
+                
+            </blockquote>
         </article>
-        <div class="grid">
-            <img src="images/gurohandeland_sun.png" alt="Guro Handeland">
-        </div>
     </main>
     <footer>
-        <small>Copyright Guro Handeland</small>
+        <div class="some">
+            <p>Find me on</p>
+            <menu class="somemenu">
+                <li><a href="https://www.instagram.com/gurogreier/" class="somelink" target="_blank">Instagram</a></li>
+                <li><a href="https://www.linkedin.com/in/guro-handeland-740171156/" class="somelink" target="_blank">LinkedIn</a></li>
+                <li><a href="https://www.facebook.com/guro.handeland/" class="somelink" target="_blank">Facebook</a></li>
+            </menu>
+        </div>
+        <small>copyright © Guro Handeland</small>
     </footer>
 </body>
 </html>
