--- a/photo.html
+++ b/photo.html
@@ -8,16 +8,16 @@
 </head>
 
 <body>
-    <nav>
-        <menu>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="drawings.html">Drawings</a></li>
-            <li><a href="photo.html">Photo</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="where.html">Hvor er jeg</a></li>
+    <header>
+        <menu class="navmenu">
+            <li class="navli"><a class="nava" href="index.html">Home</a></li>
+            <li class="navli"><a class="nava" href="about.html">About</a></li>
+            <li class="navli"><a class="nava" href="drawings.html">Drawings</a></li>
+            <li class="navli"><a class="nava" href="photo.html">Photo</a></li>
+            <li class="navli"><a class="nava" href="projects.html">Projects</a></li>
+            <li class="navli"><a class="nava" href="where.html">Whereabouts</a></li>
         </menu>
-    </nav>
+    </header>
     <div class="grid">
         <h2>
             Olympus
