--- a/where.html
+++ b/where.html
@@ -3,21 +3,21 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>All the light caught</title>
+    <title>You can reach me</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <nav>
-        <menu>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="drawings.html">Drawings</a></li>
-            <li><a href="photo.html">Photo</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="where.html">Hvor er jeg</a></li>
+    <header>
+        <menu class="navmenu">
+            <li class="navli"><a class="nava" href="index.html">Home</a></li>
+            <li class="navli"><a class="nava" href="about.html">About</a></li>
+            <li class="navli"><a class="nava" href="drawings.html">Drawings</a></li>
+            <li class="navli"><a class="nava" href="photo.html">Photo</a></li>
+            <li class="navli"><a class="nava" href="projects.html">Projects</a></li>
+            <li class="navli"><a class="nava" href="where.html">Whereabouts</a></li>
         </menu>
-    </nav>
+    </header>
     <div class="where">
         <h2>
             Nøtterøy / Nissedal, Vestfold & Telemark, Norge
