Add start of slidesjow

--- a/drawings.html
+++ b/drawings.html
@@ -22,6 +22,14 @@
         <h2>
             Drawings
         </h2>
+        <div>
+            <img class="slideshow" src="draw1.jpg"/>
+            <img class="slideshow" src="draw2.jpg"/>
+            <img class="slideshow" src="draw3.jpg"/>
+            <img class="slideshow" src="draw4.jpg"/>
+            <img class="slideshow" src="draw4.jpg"/>
+            <img class="slideshow" src="draw5.jpg"/>
+        </div>
     </div>
 </body>
 
