--- a/about.html
+++ b/about.html
@@ -16,17 +16,12 @@
             <li class="navli"><a class="nava" href="where.html">Whereabouts</a></li>
         </menu>
     </header>
-    <img class="pb" src="images/gurohandeland_sun.png" alt="Guro i sola"/>
-    <div>
-        <blockquote class="about_text">
-            <p class="about_text">Guro, 25 y/o. Always on the look for the reflection of the sun. Knows how to code and how to find solutions. 
-            Have a deep passion for coffee, collages and hikes. And doodling. </p>
-            <p class="about_text"> I will be living in my Transporter from 05.2023.</p>
-        </blockquote>
-        <address class="about_text">
-            Contact me by calling +47 406 28 219. Or email me at
-            <a href=mailto:"guro@handeland.info">guro@handeland.info</a>
-        </address>
+    <img class="pb" src="images/gurohandeland_sun.png"/>
+    <div class="about_text">
+        <blockquote>Guro, 25 y/o. Always on the look for the reflection of the sun. Know how to code and how to find solutions. 
+        Have a deep passion for coffee, collages and hikes. And doodling. </blockquote>
+        <blockquote>I will be living in my Transporter from 05.2023.</blockquote>
+        <blockquote>Contact me by calling +47 406 28 219. Or email me at <a href=mailto:"guro@handeland.info">guro@handeland.info</a></blockquote>
         <!--<iframe src="/docs/CV-gh.pdf" width="100%" height="100%" style=border:none></iframe>
         -->
     </div>  
