--- a/drawings.html
+++ b/drawings.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>All the light caught</title>
+    <title>All the lines caught</title>
+    <script src="slideshow.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -23,12 +24,15 @@
             Drawings
         </h2>
         <div>
-            <img class="slideshow" src="draw1.jpg"/>
-            <img class="slideshow" src="draw2.jpg"/>
-            <img class="slideshow" src="draw3.jpg"/>
-            <img class="slideshow" src="draw4.jpg"/>
-            <img class="slideshow" src="draw4.jpg"/>
-            <img class="slideshow" src="draw5.jpg"/>
+            <img class="slides" src="images/foodsigns/fsdrawn1.png"/>
+            <img class="slides" src="images/foodsigns/fsdrawn2.png"/>
+            <img class="slides" src="images/foodsigns/fsdrawn3.png"/>
+            <img class="slides" src="images/foodsigns/fsdrawn4.png"/>
+            <img class="slides" src="images/foodsigns/fsdrawn5.png"/>
+            <img class="slides" src="images/foodsigns/fsdrawn6.png"/>
+
+            <button class="sshowbutt_left" onclick="plusDivs(-1)">Left</button>
+            <button class="sshowbutt_right" onclick="plusDivs(+1)">Right</button>
         </div>
     </div>
 </body>
