--- a/where.html
+++ b/where.html
@@ -19,6 +19,7 @@
         </menu>
     </header>
     <div class="where">
+        <h1>mitt oppholdsted atm</h1>
         <h2>
             Nøtterøy / Nissedal, Vestfold & Telemark, Norge
         </h2>
