--- a/about.html
+++ b/about.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Guro Handeland - About</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body style=background-image:url("images/rock.jpg")>
-    <header>
-        <menu class="navmenu">
-            <li class="navli"><a class="nava" href="index.html">Home</a></li>
-            <li class="navli"><a class="nava" href="about.html">About</a></li>
-            <li class="navli"><a class="nava" href="drawings.html">Drawings</a></li>
-            <li class="navli"><a class="nava" href="photo.html">Photo</a></li>
-            <li class="navli"><a class="nava" href="projects.html">Projects</a></li>
-            <li class="navli"><a class="nava" href="where.html">Whereabouts</a></li>
-        </menu>
-    </header>
-    <img class="pb" src="images/gurohandeland_sun.png"/>
-    <div class="about_text">
-        <blockquote>Guro, 25 y/o. Always on the look for the reflection of the sun. Know how to code and how to find solutions. 
-        Have a deep passion for coffee, collages and hikes. And doodling. </blockquote>
-        <blockquote>I will be living in my Transporter from 05.2023.</blockquote>
-        <blockquote>Contact me by calling +47 406 28 219. Or email me at <a href=mailto:"guro@handeland.info">guro@handeland.info</a></blockquote>
-        <!--<iframe src="/docs/CV-gh.pdf" width="100%" height="100%" style=border:none></iframe>
-        -->
-    </div>  
+    <head>
+        <meta charset="UTF-8">
+        <title>Guro Handeland - About</title>
+        <link rel="stylesheet" href="styles.css"></link>
+        <script src="slideshow.js"></script>
+    </head>
+    <body>
+        <header>
+            <menu class="navmenu">
+                <li class="navli"><a class="nava" href="index.html">Home</a></li>
+                <li class="navli"><a class="nava" href="about.html">About</a></li>
+                <li class="navli"><a class="nava" href="drawings.html">Drawings</a></li>
+                <li class="navli"><a class="nava" href="photo.html">Photo</a></li>
+                <li class="navli"><a class="nava" href="projects.html">Projects</a></li>
+                <li class="navli"><a class="nava" href="where.html">Whereabouts</a></li>
+            </menu>
+        </header>
+        <img class="pb" src="images/gurohandeland_sun.png"/>
+        <div class="about_text">
+            <blockquote>Guro, 25 y/o. Always on the look for the reflection of the sun. Know how to code and how to find solutions. Have a deep passion for coffee, collages and hikes. And doodling. </blockquote>
+            <blockquote>I will be living in my Transporter from 05.2023.</blockquote>
+            <blockquote>Contact me by calling +47 406 28 219. Or email me at <a href=mailto:"guro@handeland.info">guro@handeland.info</a></blockquote>
+        </div>  
 </body>
 </html>
