--- a/drawings.html
+++ b/drawings.html
@@ -24,6 +24,9 @@
             Drawings
         </h2>
         <div>
+            <p>These drawings I did on my mousepad, in InDesign, for <a
+                            href="https://www.trevarefabrikken.no/">Trevarefabrikken</a>. We wanted to sell more stuff.</p>
+
             <img class="slides" src="images/foodsigns/fsdrawn1.png"/>
             <img class="slides" src="images/foodsigns/fsdrawn2.png"/>
             <img class="slides" src="images/foodsigns/fsdrawn3.png"/>
