--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
 
     </main>
         <article class="grid">
-            <p>This is the website of <h1>Guro Handeland</h1></p><p>Her stuff. What she has done in different forms and ways.</p>
+            <p>This is the website of <h1>Guro Handeland</h1></p><p>Her stuff. What she has done in different forms and ways.</p><p>In absolute self written html css js synergy.</p><p>Have patience. I do.</p>
             <blockquote>
 
 
 
-                
+
             </blockquote>
         </article>
     </main>
     <footer>
         <div class="some">
-            <p>Find me on</p>
             <menu class="somemenu">
+                <text class="about_text">Find me on</text>
                 <li><a href="https://www.instagram.com/gurogreier/" class="somelink" target="_blank">Instagram</a></li>
                 <li><a href="https://www.linkedin.com/in/guro-handeland-740171156/" class="somelink" target="_blank">LinkedIn</a></li>
                 <li><a href="https://www.facebook.com/guro.handeland/" class="somelink" target="_blank">Facebook</a></li>
