new menu and cleaner design

--- a/about.html
+++ b/about.html
@@ -5,23 +5,29 @@
         <title>Guro Handeland - About</title>
         <link rel="stylesheet" href="styles.css"></link>
         <script src="slideshow.js"></script>
+        <script src="header.js"></script>
     </head>
     <body>
-        <header>
-            <menu class="navmenu">
-                <li class="navli"><a class="nava" href="index.html">Home</a></li>
-                <li class="navli"><a class="nava" href="about.html">About</a></li>
-                <li class="navli"><a class="nava" href="drawings.html">Drawings</a></li>
-                <li class="navli"><a class="nava" href="photo.html">Photo</a></li>
-                <li class="navli"><a class="nava" href="projects.html">Projects</a></li>
-                <li class="navli"><a class="nava" href="where.html">Whereabouts</a></li>
-            </menu>
+        <header class="my_header">
+            <div class="nav">
+                <h1 class="nav_title">Guro Handeland</h1>
+                <nav class="nav_list">
+                    <li class="nav_item"><a class="active" href="index.html">Home</a></li>
+                    <li class="nav_item"><a href="about.html">About</a></li>
+                    <li class="nav_item"><a href="drawings.html">Drawings</a></li>
+                    <li class="nav_item"><a href="photo.html">Photo</a></li>
+                    <li class="nav_item"><a href="projects.html">Projects</a></li>
+                    <li class="nav_item"><a href="where.html">Whereabouts</a></li>
+                </nav>
+            </div>
         </header>
-        <img class="pb" src="images/gurohandeland_sun.png"/>
-        <div class="about_text">
-            <blockquote>Guro, 25 y/o. Always on the look for the reflection of the sun. Know how to code and how to find solutions. Have a deep passion for coffee, collages and hikes. And doodling. </blockquote>
-            <blockquote>I will be living in my Transporter from 05.2023.</blockquote>
-            <blockquote>Contact me by calling +47 406 28 219. Or email me at <a href=mailto:"guro@handeland.info">guro@handeland.info</a></blockquote>
-        </div>  
-</body>
+        <div class="grid">
+            <img class="pb" src="images/gurohandeland_sun.png"/>
+            <div class="about_text">
+                <blockquote>Guro, 25 y/o. Always on the look for the reflection of the sun. Know how to code and how to find solutions. Have a deep passion for coffee, collages and hikes. And doodling. </blockquote>
+                <blockquote>I will be living in my Transporter from 05.2023.</blockquote>
+                <blockquote>Contact me by calling +47 406 28 219. Or email me at <a href=mailto:"guro@handeland.info">guro@handeland.info</a></blockquote>
+            </div>  
+        </div>
+    </body>
 </html>
