--- a/index.html
+++ b/index.html
@@ -5,32 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Guro Handeland - Home</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- <script src="header.js"></script>-->
 </head>
 <body>
-    <header>
-        <menu class="navmenu">
-            <li class="navli"><a class="nava" href="index.html">Home</a></li>
-            <li class="navli"><a class="nava" href="about.html">About</a></li>
-            <li class="navli"><a class="nava" href="drawings.html">Drawings</a></li>
-            <li class="navli"><a class="nava" href="photo.html">Photo</a></li>
-            <li class="navli"><a class="nava" href="projects.html">Projects</a></li>
-            <li class="navli"><a class="nava" href="where.html">Whereabouts</a></li>
-        </menu>
+    <header class="my_header">
+        <div class="nav">
+            <h1 class="nav_title">Guro Handeland</h1>
+            <nav class="nav_list">
+                <li class="nav_item"><a class="active" href="index.html">Home</a></li>
+                <li class="nav_item"><a href="about.html">About</a></li>
+                <li class="nav_item"><a href="drawings.html">Drawings</a></li>
+                <li class="nav_item"><a href="photo.html">Photo</a></li>
+                <li class="nav_item"><a href="projects.html">Projects</a></li>
+                <li class="nav_item"><a href="where.html">Whereabouts</a></li>
+            </nav>
+        </div>
     </header>
-    <main>
-
-
-    </main>
-        <article class="grid">
+    <div class="main_content">
+        <div class="grid">
             <p>This is the website of <h1>Guro Handeland</h1></p><p>Her stuff. What she has done in different forms and ways.</p><p>In absolute self written html css js synergy.</p><p>Have patience. I do.</p>
-            <blockquote>
-
-
-
-
-            </blockquote>
-        </article>
-    </main>
+        </div>
+    </div>
     <footer>
         <div class="some">
             <menu class="somemenu">
