--- a/text.html
+++ b/text.html
@@ -8,16 +8,19 @@
 </head>
 
 <body>
-    <nav>
-        <menu>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="drawings.html">Drawings</a></li>
-            <li><a href="photo.html">Photo</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="where.html">Hvor er jeg</a></li>
-        </menu>
-    </nav>
+<header class="my_header">
+    <div class="nav">
+        <h1 class="nav_title">Guro Handeland</h1>
+        <nav class="nav_list">
+            <li class="nav_item"><a class="active" href="index.html">Home</a></li>
+            <li class="nav_item"><a href="about.html">About</a></li>
+            <li class="nav_item"><a href="drawings.html">Drawings</a></li>
+            <li class="nav_item"><a href="photo.html">Photo</a></li>
+            <li class="nav_item"><a href="projects.html">Projects</a></li>
+            <li class="nav_item"><a href="where.html">Whereabouts</a></li>
+        </nav>
+    </div>
+</header>
     <div class="grid">
         <h2>
             Text
