--- a/projects.html
+++ b/projects.html
@@ -8,15 +8,18 @@
 </head>
 
 <body>
-    <header>
-        <menu class="navmenu">
-            <li class="navli"><a class="nava" href="index.html">Home</a></li>
-            <li class="navli"><a class="nava" href="about.html">About</a></li>
-            <li class="navli"><a class="nava" href="drawings.html">Drawings</a></li>
-            <li class="navli"><a class="nava" href="photo.html">Photo</a></li>
-            <li class="navli"><a class="nava" href="projects.html">Projects</a></li>
-            <li class="navli"><a class="nava" href="where.html">Whereabouts</a></li>
-        </menu>
+    <header class="my_header">
+        <div class="nav">
+            <h1 class="nav_title">Guro Handeland</h1>
+            <nav class="nav_list">
+                <li class="nav_item"><a class="active" href="index.html">Home</a></li>
+                <li class="nav_item"><a href="about.html">About</a></li>
+                <li class="nav_item"><a href="drawings.html">Drawings</a></li>
+                <li class="nav_item"><a href="photo.html">Photo</a></li>
+                <li class="nav_item"><a href="projects.html">Projects</a></li>
+                <li class="nav_item"><a href="where.html">Whereabouts</a></li>
+            </nav>
+        </div>
     </header>
     <div class="grid">
         <h2>
