--- a/drawings.html
+++ b/drawings.html
@@ -26,18 +26,38 @@
             Drawings
         </h2>
         <div>
-            <p>These drawings I did on my mousepad, in InDesign, for <a
-                            href="https://www.trevarefabrikken.no/">Trevarefabrikken</a>. We wanted to sell more stuff.</p>
-
-            <img class="slides" src="images/foodsigns/fsdrawn1.png"/>
-            <img class="slides" src="images/foodsigns/fsdrawn2.png"/>
-            <img class="slides" src="images/foodsigns/fsdrawn3.png"/>
-            <img class="slides" src="images/foodsigns/fsdrawn4.png"/>
-            <img class="slides" src="images/foodsigns/fsdrawn5.png"/>
-            <img class="slides" src="images/foodsigns/fsdrawn6.png"/>
-
-            <button class="sshowbutt_left" onclick="plusDivs(-1)">Left</button>
-            <button class="sshowbutt_right" onclick="plusDivs(+1)">Right</button>
+            <div class="img_slideshow_container">
+                <h3>Mousepad Food Signs</h3>
+                <p>These drawings I did on my mousepad, in InDesign, to draw attention to the drinks we sold at <a
+                        href="https://www.trevarefabrikken.no/">Trevarefabrikken</a></p>
+                <div class="slides">
+                    <div class="numbertext">1/6</div>
+                    <img class="slide_img" src="images/foodsigns/fsdrawn1.jpeg"/>
+                </div>
+                <div class="slides">
+                    <div class="numbertext">2/6</div>
+                    <img class="slide_img" src="images/foodsigns/fsdrawn2.jpeg" />
+                </div>
+                <div class="slides">
+                    <div class="numbertext">3/6</div>
+                    <img class="slide_img" src="images/foodsigns/fsdrawn3.jpeg" />
+                </div>
+                <div class="slides">
+                    <div class="numbertext">4/6</div>
+                    <img class="slide_img" src="images/foodsigns/fsdrawn4.jpeg" />
+                </div>
+                <div class="slides">
+                    <div class="numbertext">5/6</div>
+                    <img class="slide_img" src="images/foodsigns/fsdrawn5.jpeg" />
+                </div>
+                <div class="slides">
+                    <div class="numbertext">6/6</div>
+                    <img class="slide_img" src="images/foodsigns/fsdrawn6.jpeg" />
+                </div>
+                <!-- &#10094/94 er piler :) -->
+                <a class="sshowbutt_prev" onclick="plusDivs(-1)">Previous</a>
+                <a class="sshowbutt_next" onclick="plusDivs(+1)">Next</a>
+            </div>
         </div>
     </div>
 </body>
