New text in Drawings

--- a/about.html
+++ b/about.html
@@ -10,7 +10,6 @@
     <body>
         <header class="my_header">
             <div class="nav">
-                <h1 class="nav_title">Guro Handeland</h1>
                 <nav class="nav_list">
                     <li class="nav_item"><a class="active" href="index.html">Home</a></li>
                     <li class="nav_item"><a href="about.html">About</a></li>
@@ -21,13 +20,25 @@
                 </nav>
             </div>
         </header>
-        <div class="grid">
+        <div class="about_container">
             <img class="pb" src="images/gurohandeland_sun.png"/>
             <div class="about_text">
-                <blockquote>Guro, 25 y/o. Always on the look for the reflection of the sun. Know how to code and how to find solutions. Have a deep passion for coffee, collages and hikes. And doodling. </blockquote>
-                <blockquote>I will be living in my Transporter from 05.2023.</blockquote>
-                <blockquote>Contact me by calling +47 406 28 219. Or email me at <a href=mailto:"guro@handeland.info">guro@handeland.info</a></blockquote>
+                <p>Guro, 25 y/o. Always on the look for the reflection of the sun. Know how to code and how to find solutions. Have a deep passion for coffee, collages and hikes. And doodling. </p>
+                <p>I will be living in my Transporter from 05.2023.</p>
+                <p>Contact me by calling +47 406 28 219. Or email me at <a href=mailto:"guro@handeland.info">guro@handeland.info</a></p>
             </div>  
         </div>
+        <footer>
+            <div class="some">
+                <menu class="somemenu">
+                    <text class="about_text">Find me on</text>
+                    <li><a href="https://www.instagram.com/gurogreier/" class="somelink" target="_blank">Instagram</a></li>
+                    <li><a href="https://www.linkedin.com/in/guro-handeland-740171156/" class="somelink"
+                            target="_blank">LinkedIn</a></li>
+                    <li><a href="https://www.facebook.com/guro.handeland/" class="somelink" target="_blank">Facebook</a></li>
+                </menu>
+            </div>
+            <small>copyright © Guro Handeland</small>
+        </footer>
     </body>
 </html>
