--- a/drawings.html
+++ b/drawings.html
@@ -26,6 +26,11 @@
             Drawings
         </h2>
         <div>
+            <p>I draw when I feel overwhelmed by life. Usually I draw with a text on the side, as it helps me sort out thoughts and worries.</p>
+            <p>I run a drawing class in Henningsvær, Lofoten. Here, I have noticed that drawing has a meditative effect on people. I believe everyone can draw, it is just a matter of perspective and patience.</p>
+            <p>I have also found drawing useful in my work as a cafemanager.</p>
+        </div>
+        <div>
             <div class="img_slideshow_container">
                 <h3>Mousepad Food Signs</h3>
                 <p>These drawings I did on my mousepad, in InDesign, to draw attention to the drinks we sold at <a
