--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <header class="my_header">
         <div class="nav">
-            <h1 class="nav_title">Guro Handeland</h1>
+            <h1 class="nav_item"><a href="about.html">Guro Handeland</a></h1>
             <nav class="nav_list">
-                <li class="nav_item"><a class="active" href="index.html">Home</a></li>
+                <li class="nav_item"><a href="index.html">Home</a></li>
                 <li class="nav_item"><a href="about.html">About</a></li>
                 <li class="nav_item"><a href="drawings.html">Drawings</a></li>
                 <li class="nav_item"><a href="photo.html">Photo</a></li>
