--- a/where.html
+++ b/where.html
@@ -21,9 +21,9 @@
         </div>
     </header>
     <div class="where">
-        <h1>mitt oppholdsted atm</h1>
-        <h2>
-            Nøtterøy / Nissedal, Vestfold & Telemark, Norge
+        <h3>mitt oppholdsted atm</h1>
+        <h3>
+            Nøtterøy / Nissedal, Vestfold & Telemark
         </h2>
     </div>
 </body>
