--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,14 @@
             Projects
         </h2>
     </div>
+    <div class="projects_list_container">
+        <ul class="projects_list">
+            <li class="projects_li_item"><a href="https://www.uio.no/studier/emner/matnat/ifi/IN1060/v19/prosjekt-2019/hvass/">Project first year – University of Oslo: HVASS</a></li>
+            <li class="projects_li_item"><a href="https://www.uio.no/studier/emner/matnat/ifi/IN3010/v21/prosjekter/diy/index.html ">Project third year – University of Oslo: Elan</a></li>
+        </ul>
+
+
+    </div>
 </body>
 
 </html>
