New nav_menu home

--- a/index.html
+++ b/index.html
@@ -9,21 +9,28 @@
 </head>
 <body>
     <header class="my_header">
-        <div class="nav">
-            <h1 class="nav_item"><a href="about.html">Guro Handeland</a></h1>
-            <nav class="nav_list">
-                <li class="nav_item"><a href="index.html">Home</a></li>
-                <li class="nav_item"><a href="about.html">About</a></li>
-                <li class="nav_item"><a href="drawings.html">Drawings</a></li>
-                <li class="nav_item"><a href="photo.html">Photo</a></li>
-                <li class="nav_item"><a href="projects.html">Projects</a></li>
-                <li class="nav_item"><a href="where.html">Whereabouts</a></li>
-            </nav>
-        </div>
+        <h1 class="nav_item"><a href="about.html">Guro Handeland</a></h1>
     </header>
-    <div class="main_content">
-        <div class="grid">
-            <p>This is the website of <h1>Guro Handeland</h1></p><p>Her stuff. What she has done in different forms and ways.</p><p>In absolute self written html css js synergy.</p><p>Have patience. I do.</p>
+    <div>
+        <div class="main_content">
+            <div class="grid">
+                <p>This is the website of
+                <h1 class="nav_item"><a href="about.html">Guro Handeland</a></h1>
+                </p><br>
+                <p>Her stuff. What she has done in different forms and ways.</p>
+                <p>In absolute self written (but google inspired) html css js synergy.</p>
+                <p>Have patience. I do.</p>
+            </div>
+        </div>
+        <div class="home_nav">
+            <nav class="home_nav_list">
+                <li class="home_nav_item"><a href="index.html">Home</a></li>
+                <li class="home_nav_item"><a href="about.html">About</a></li>
+                <li class="home_nav_item"><a href="drawings.html">Drawings</a></li>
+                <li class="home_nav_item"><a href="photo.html">Photo</a></li>
+                <li class="home_nav_item"><a href="projects.html">Projects</a></li>
+                <li class="home_nav_item"><a href="where.html">Whereabouts</a></li>
+            </nav>
         </div>
     </div>
     <footer>
