--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Guro Handeland - Home</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- <script src="header.js"></script>-->
+    <script src="home.js"></script>
 </head>
 <body>
     <header class="my_header">
@@ -14,22 +14,21 @@
     <div>
         <div class="main_content">
             <div class="grid">
-                <p>This is the website of
-                <h1 class="nav_item"><a href="about.html">Guro Handeland</a></h1>
-                </p><br>
+                <p>This is the website of <a href="about.html">Guro Handeland</a></p>
                 <p>Her stuff. What she has done in different forms and ways.</p>
                 <p>In absolute self written (but google inspired) html css js synergy.</p>
-                <p>Have patience. I do.</p>
+                <p>I wanted this page to be as static as possible. No extra fun stuff.</p>
+                <p>Have patience. I do. More will come and arrive.</p>
             </div>
         </div>
         <div class="home_nav">
             <nav class="home_nav_list">
-                <li class="home_nav_item"><a href="index.html">Home</a></li>
-                <li class="home_nav_item"><a href="about.html">About</a></li>
-                <li class="home_nav_item"><a href="drawings.html">Drawings</a></li>
-                <li class="home_nav_item"><a href="photo.html">Photo</a></li>
-                <li class="home_nav_item"><a href="projects.html">Projects</a></li>
-                <li class="home_nav_item"><a href="where.html">Whereabouts</a></li>
+                <li class="home_nav_item"><button onClick="openHome();">Home</button></li>
+                <li class="home_nav_item"><button onClick="openAbout();">About</button></li>
+                <li class="home_nav_item"><button onClick="openDrawings();">Drawings</button></li>
+                <li class="home_nav_item"><button onClick="openPhoto();">Photo</button></li>
+                <li class="home_nav_item"><button onClick="openProjects();">Projects</button></li>
+                <li class="home_nav_item"><button onClick="openWhere();">Whereabouts</button></li>
             </nav>
         </div>
     </div>
