--- a/where.html
+++ b/where.html
@@ -21,10 +21,8 @@
         </div>
     </header>
     <div class="where">
-        <h3>mitt oppholdsted atm</h1>
-        <h3>
-            Nøtterøy / Nissedal, Vestfold & Telemark
-        </h2>
+        <h1>mitt oppholdsted atm</h1>
+        <h3>Oslo, Oslo</h3>
     </div>
 </body>
 
