--- a/about.html
+++ b/about.html
@@ -2,6 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+            <!--Set the viewport in order to make the site responsive-->
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Guro Handeland - About</title>
         <link rel="stylesheet" href="styles.css"></link>
         <script src="slideshow.js"></script>
