--- a/photo.html
+++ b/photo.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!--Set the viewport in order to make the site responsive-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All the light caught</title>
     <link rel="stylesheet" href="styles.css">
     <script src="slideshow.js"></script>
