--- a/text.html
+++ b/text.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <!--Set the viewport in order to make the site responsive-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All the light caught</title>
     <link rel="stylesheet" href="styles.css">
 </head>
