--- a/drawings.html
+++ b/drawings.html
@@ -38,9 +38,8 @@
         <br>
         <div>
             <div class="img_slideshow_container">
-                <h3>Mousepad Food Signs</h3>
-                <p>These drawings I did on my mousepad, in InDesign, to draw attention to the drinks we sold at <a
-                        href="https://www.trevarefabrikken.no/">Trevarefabrikken</a></p>
+            <h3>Mousepad Food Signs</h3>
+            <div style="border: 0.1vw solid #32598C;">
                 <div class="slides">
                     <div class="numbertext">1/6</div>
                     <img class="slide_img" src="images/foodsigns/fsdrawn1.jpeg"/>
@@ -66,8 +65,11 @@
                     <img class="slide_img" src="images/foodsigns/fsdrawn6.jpeg" />
                 </div>
                 <!-- &#10094/94 er piler :) -->
-                <a class="sshowbutt_prev" onclick="plusDivs(-1)">Previous</a>
-                <a class="sshowbutt_next" onclick="plusDivs(+1)">Next</a>
+                <h3><a class="sshowbutt_prev" onclick="plusDivs(-1)">Previous</a></h3>
+                <h3><a class="sshowbutt_next" onclick="plusDivs(+1)">Next</a></h3>
+                </div>
+                <h3>These drawings I did on my mousepad. The goal was to draw attention to the drinks we sold at <a
+                        href="https://www.trevarefabrikken.no/">Trevarefabrikken</a></h3>
             </div>
         </div>
         <br>
@@ -77,6 +79,18 @@
         <br>
         <br>
     </div>
+    <footer>
+        <div class="some">
+            <menu class="somemenu">
+                <text class="about_text">Find me on</text>
+                <li><a href="https://www.instagram.com/gurogreier/" class="somelink" target="_blank">Instagram</a></li>
+                <li><a href="https://www.linkedin.com/in/guro-handeland-740171156/" class="somelink"
+                        target="_blank">LinkedIn</a></li>
+                <li><a href="https://www.facebook.com/guro.handeland/" class="somelink" target="_blank">Facebook</a></li>
+            </menu>
+        </div>
+        <small>copyright © Guro Handeland</small>
+    </footer>
 </body>
 
 </html>
