--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <div>
         <div class="main_content">
             <div class="grid">
-                <p>This is the website of <a href="about.html">Guro Handeland</a></p>
-                <p>Her stuff. What she has done in different forms and ways.</p>
-                <p>In absolute self written (but google inspired) html css js synergy.</p>
-                <p>I wanted this page to be as static as possible. No extra fun stuff.</p>
-                <p>Have patience. I do. More will come and arrive.</p>
+                <h2>This is the website of <a href="about.html">Guro Handeland</a></h2>
+                <h2>Her stuff. What she has done in different forms and ways.</h2>
+                <h2>In absolute self written (but google inspired) html css js synergy.</h2>
+                <h2>I wanted this page to be as static as possible. No extra fun stuff.</h2>
+                <h2>Have patience. I do. More will come and arrive.</h2>
             </div>
         </div>
         <div class="home_nav">
@@ -32,8 +32,6 @@
                 <li class="home_nav_item"><button onClick="openWhere();">Whereabouts</button></li>
             </nav>
         </div>
-        <br>
-        <br>
     </div>
     <footer>
         <div class="some">
