--- a/where.html
+++ b/where.html
@@ -23,9 +23,21 @@
         </div>
     </header>
     <div class="where">
-        <h1>mitt oppholdsted atm</h1>
+        <h2>Mitt oppholdsted</h2>
         <h3>Oslo, Oslo</h3>
     </div>
+    <footer>
+        <div class="some">
+            <menu class="somemenu">
+                <text class="about_text">Find me on</text>
+                <li><a href="https://www.instagram.com/gurogreier/" class="somelink" target="_blank">Instagram</a></li>
+                <li><a href="https://www.linkedin.com/in/guro-handeland-740171156/" class="somelink"
+                        target="_blank">LinkedIn</a></li>
+                <li><a href="https://www.facebook.com/guro.handeland/" class="somelink" target="_blank">Facebook</a></li>
+            </menu>
+        </div>
+        <small>copyright © Guro Handeland</small>
+    </footer>
 </body>
 
 </html>
