--- a/photo.html
+++ b/photo.html
@@ -28,8 +28,8 @@
         </h2>
     </div>
     <div class="img_slideshow_container">
+        <div>
         <h3>Olympus</h3>
-        <p>A few years back I bought an Olympus XA2 at a second hand store. These are some of my favourites.</p>
         <div class="slides">
             <div class="numbertext">1/3</div>
             <img class="slide_img" src="images/olympus/olympus1.jpg" />
@@ -43,10 +43,38 @@
             <img class="slide_img" src="images/olympus/olympus3.jpg" />
         </div>
         <!-- &#10094/95 er piler :) -->
-        <a class="sshowbutt_prev" onclick="plusDivs(-1)">Previous</a>
-        <a class="sshowbutt_next" onclick="plusDivs(+1)">Next</a>
+        <h3><a class="sshowbutt_prev" onclick="plusDivs(-1)">Previous</a></h3>
+        <h3><a class="sshowbutt_next" onclick="plusDivs(+1)">Next</a></h3>
         </div>
+        <h3>A few years back I bought an Olympus XA2 camera at a second hand store. <br>These are some of my favourites.</h3>
     </div>
+    <div class="img_slideshow_container">
+        <div>
+            <h3>Light</h3>
+            <div class="slides">
+                <div class="numbertext">1/4</div>
+                <img class="slide_img" src="images/light/light1.jpeg" />
+            </div>
+            <div class="slides">
+                <div class="numbertext">2/4</div>
+                <img class="slide_img" src="images/light/light2.jpeg" />
+            </div>
+            <div class="slides">
+                <div class="numbertext">3/4</div>
+                <img class="slide_img" src="images/light/light3.jpeg" />
+            </div>
+            <div class="slides">
+                <div class="numbertext">4/4</div>
+                <img class="slide_img" src="images/light/light4.jpeg" />
+            </div>
+            <!-- &#10094/95 er piler :) -->
+            <h3><a class="sshowbutt_prev" onclick="plusDivs(-1)">Previous</a></h3>
+            <h3><a class="sshowbutt_next" onclick="plusDivs(+1)">Next</a></h3>
+        </div>
+        <h3>I catch light with my phone. On walls.
+        </h3>
+    </div>
+</div>
 </body>
 
 </html>
