--- a/projects.html
+++ b/projects.html
@@ -32,9 +32,19 @@
             <li class="projects_li_item"><a href="https://www.uio.no/studier/emner/matnat/ifi/IN1060/v19/prosjekt-2019/hvass/">Project first year – University of Oslo: HVASS</a></li>
             <li class="projects_li_item"><a href="https://www.uio.no/studier/emner/matnat/ifi/IN3010/v21/prosjekter/diy/index.html ">Project third year – University of Oslo: Elan</a></li>
         </ul>
-
-
     </div>
+    <footer>
+        <div class="some">
+            <menu class="somemenu">
+                <text class="about_text">Find me on</text>
+                <li><a href="https://www.instagram.com/gurogreier/" class="somelink" target="_blank">Instagram</a></li>
+                <li><a href="https://www.linkedin.com/in/guro-handeland-740171156/" class="somelink"
+                        target="_blank">LinkedIn</a></li>
+                <li><a href="https://www.facebook.com/guro.handeland/" class="somelink" target="_blank">Facebook</a></li>
+            </menu>
+        </div>
+        <small>copyright © Guro Handeland</small>
+    </footer>
 </body>
 
 </html>
