--- a/photo.html
+++ b/photo.html
@@ -27,53 +27,53 @@
             Photo
         </h2>
     </div>
-    <div id="slideshow1" class="img_slideshow_container">
-        <div>
+    <div class="img_slideshow_container">
         <h3>Olympus</h3>
-        <div class="slides">
-            <div class="numbertext">1/3</div>
-            <img class="slide_img" src="images/olympus/olympus1.jpg" />
-        </div>
-        <div class="slides">
-            <div class="numbertext">2/3</div>
-            <img class="slide_img" src="images/olympus/olympus2.jpg" />
-        </div>
-        <div class="slides">
-            <div class="numbertext">3/3</div>
-            <img class="slide_img" src="images/olympus/olympus3.jpg" />
+        <div id="slideshow1">
+            <div class="olympus_slides">
+                <div class="numbertext">1/3</div>
+                <img class="slide_img" src="images/olympus/olympus1.jpg" />
+            </div>
+            <div class="olympus_slides">
+                <div class="numbertext">2/3</div>
+                <img class="slide_img" src="images/olympus/olympus2.jpg" />
+            </div>
+            <div class="olympus_slides">
+                <div class="numbertext">3/3</div>
+                <img class="slide_img" src="images/olympus/olympus3.jpg" />
+            </div>
         </div>
         <!-- &#10094/95 er piler :) -->
-        <h3><a class="sshowbutt_prev" onclick="plusSlides(-1)">Previous</a></h3>
-        <h3><a class="sshowbutt_next" onclick="plusSlides(1)">Next</a></h3>
-        </div>
+        <h3><a class="prev" onclick="plusSlides(-1, 0)">Previous</a></h3>
+        <h3><a class="next" onclick="plusSlides(1, 0)">Next</a></h3>
         <h3>A few years back I bought an Olympus XA2 camera at a second hand store. <br>These are some of my favourites.</h3>
     </div>
+
     <div class="img_slideshow_container">
         <h3>Light</h3>
-        <div id="slideshow2">
-            <div class="slides">
+        <div id="slideshow2"> 
+            <div class="light_slides">
                 <div class="numbertext">1/4</div>
                 <img class="slide_img" src="images/light/light1.jpeg" />
             </div>
-            <div class="slides">
+            <div class="light_slides">
                 <div class="numbertext">2/4</div>
                 <img class="slide_img" src="images/light/light2.jpeg" />
             </div>
-            <div class="slides">
+            <div class="light_slides">
                 <div class="numbertext">3/4</div>
                 <img class="slide_img" src="images/light/light3.jpeg" />
             </div>
-            <div class="slides">
+            <div class="light_slides">
                 <div class="numbertext">4/4</div>
                 <img class="slide_img" src="images/light/light4.jpeg" />
             </div>
-        </div>
             <!-- &#10094/95 er piler :) -->
-            <h3><a class="sshowbutt_prev" onclick="plusSlides(-1, 2)">Previous</a></h3>
-            <h3><a class="sshowbutt_next" onclick="plusSlides(1, 2)">Next</a></h3>
-        <h3>I catch light with my phone. On walls </h3>
+            <h3><a class="prev" onclick="plusSlides(-1, 1)">Previous</a></h3>
+            <h3><a class="next" onclick="plusSlides(1, 1)">Next</a></h3>
+        </div>
+        <h3>I catch light with my phone:) </h3>
     </div>
 </div>
 </body>
-
 </html>
