--- a/photo.html
+++ b/photo.html
@@ -32,15 +32,15 @@
         <div id="slideshow1">
             <div class="olympus_slides">
                 <div class="numbertext">1/3</div>
-                <img class="slide_img" src="images/olympus/olympus1.jpg" />
+                <img class="slide_img" src="images/olympus/olympus1.JPG" />
             </div>
             <div class="olympus_slides">
                 <div class="numbertext">2/3</div>
-                <img class="slide_img" src="images/olympus/olympus2.jpg" />
+                <img class="slide_img" src="images/olympus/olympus2.JPG" />
             </div>
             <div class="olympus_slides">
                 <div class="numbertext">3/3</div>
-                <img class="slide_img" src="images/olympus/olympus3.jpg" />
+                <img class="slide_img" src="images/olympus/olympus3.JPG" />
             </div>
         </div>
         <!-- &#10094/95 er piler :) -->
